# view3D

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/: CMakeLists.txt  matrix4f.h  vector2f.h  vector3f.h  vertex.h
src/: CMakeLists.txt  main.cpp
src/data/: CMakeLists.txt  mesh.cpp  mesh.h  obj_parser.cpp  vertex.cpp  vertex.h
src/math/: CMakeLists.txt  matrix.cpp  matrix.h  vector.h
src/maths/: matrix4f.cpp  vector2f.cpp  vector3f.cpp
test/: CMakeLists.txt  matrix.test.cpp  obj_parser.test.cpp  test1.cpp  vector.test.cpp
